# news_classify

./: .env.example  .gitignore  main.py  pyproject.toml
sql/: init.sql  source.sql
src/: mvp.py  pipeline.py
src/config/: config.py
src/models/: RespModels.py
src/services/: ai_analyzer.py  kafka_consumer.py  news_fetcher.py  result_store.py  stock_data.py
src/utils/: dedup.py  log_setter.py  mysql_client.py  redis_client.py  timelyre_client.py
