[project]
name = "newsclassify"
version = "0.1.0"
description = "新闻分类"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.0.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.2",
    "pandas>=2.2.0,<2.3",
    "pydantic-settings>=2.0.0",
    "redis>=8.0.0",
    "requests>=2.31.0",
    "simhash>=2.1.2",
    "tabulate>=0.10.0",
    "timelyre_api==1.4.0",
]

[tool.uv.sources]
timelyre-api = { path = "/home/transwarp/Code/AI金融项目/timelyre_api-1.4.0-py3-none-any.whl" }
